# momobot

./: .gitignore  00-EXECUTIVE_SUMMARY.md  AGENT_ASSIGNMENT.md  AGENT_SETUP_MENU.bat  AGENT_SETUP_WINDOWS.md  AI_TASK_CREATOR_IMPLEMENTATION.md  COMPLETE_SETUP.bat  CREATE_SHORTCUTS.ps1  DELIVERY_COMPLETE.md  DEPLOYMENT_GUIDE_v2.2.md  DIAGNOSE_AGENT.ps1  DOCUMENTATION_INDEX.md  Dockerfile.prod  EMAIL_TODOS.md  EMAIL_WORKFLOW_GUIDE.md  EMAIL_WORKFLOW_QUICKSTART.md  EMAIL_WORKFLOW_SETUP.md  EMAIL_WORKFLOW_SUMMARY.md  FILE_INDEX.md  GIT_PUSH_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_v2.2.md  INSTALL_AGENT_WINDOWS.bat  INSTALL_AGENT_WINDOWS.ps1  INSTALL_GIT.bat  LINKEDIN_POST.md  PROJECT_TODO.md  PUSH_GIT_SUMMARY.md  PUSH_TO_GIT.bat  PUSH_TO_GITHUB.ps1  QUICKSTART_v2.2.md  QUICK_REFERENCE.txt  QUICK_START_EMAIL_WORKFLOW.md  README.md  README_WORKFLOW_BUILDER.md  README_v2.2.md  SETUP_CHECKLIST.txt  START_AGENT.bat  START_HERE.md  TASK_CREATOR_GUIDE.md  (+16 more)
python-agent-platform/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
python-agent-platform/.github/workflows/: ci.yml
python-agent-platform/agent/local_agent/app/: approved_scripts.json  client.py  main.py  (+5 more)
python-agent-platform/docker/: agent_api.Dockerfile
python-agent-platform/docs/: MULTI_AGENT_ASSIGNMENT.md  PROJECT_TODO.md  SECURITY.md  USAGE.md
python-agent-platform/server/control_plane/: manage.py
python-agent-platform/shared/: test_signing.py
python-agent-platform/shared/schemas/: agent_protocol.py  signing.py
(+173 files in other folders)
